# opencv_experiments

./: README.md
data/: roadshot_seg.m
opencv_backproj/: CMakeLists.txt  backproj.cxx
opencv_bound/: CMakeLists.txt
opencv_canny/: CMakeLists.txt  canny.cxx
opencv_helloworld/: CMakeLists.txt
opencv_kmeans/: CMakeLists.txt  kmeans.cxx
opencv_lk/: CMakeLists.txt  lk_optic_flow.c  lk_optic_flow.cxx  threshold.c
opencv_model/: CMakeLists.txt  model.cxx
opencv_seg/: CMakeLists.txt  pyr_seg.cxx
opencv_threshold/: CMakeLists.txt
