PROJECT( bound_proj )
FIND_PACKAGE( OpenCV REQUIRED )
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
ADD_EXECUTABLE( bound bound.cxx )
TARGET_LINK_LIBRARIES( bound ${OpenCV_LIBS} )
