PROJECT( lk_optic_flow_proj )
FIND_PACKAGE( OpenCV REQUIRED )
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
ADD_EXECUTABLE( lk_optic_flow lk_optic_flow.cxx )
TARGET_LINK_LIBRARIES( lk_optic_flow ${OpenCV_LIBS} )
