PROJECT( threshold_proj )
FIND_PACKAGE( OpenCV REQUIRED )
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
ADD_EXECUTABLE( threshold threshold.cxx )
TARGET_LINK_LIBRARIES( threshold ${OpenCV_LIBS} )
